--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,24 +1,24 @@
-@import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProRegular.ttf") format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProDemi.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProBold.ttf") format("truetype");
+  font-weight: 700;
+}
 /**/
-/*
-@font-face {
-  font-family: "Avenir LT Pro";
-  font-weight: normal;
-  font-style: normal;
-  src: url(../../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype");
-}
-
-@font-face {
-  font-family: "Avenir LT Pro";
-  font-weight: bold;
-  font-style: normal;
-  src: url(../../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype");
-}
-*/
 * {
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
+  font-family: "avenir next";
 }
 
 body {
@@ -34,9 +34,31 @@ body {
   padding-bottom: 16px;
   text-align: center;
 }
+@media (min-width: 768px) {
+  .header {
+    padding-left: 2rem;
+  }
+}
+@media (min-width: 1279px) {
+  .header {
+    padding-left: 8rem;
+  }
+}
 .header__logo {
-  width: 20px;
-  height: 120px;
+  width: 1.25rem;
+  height: 7.5rem;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    width: 2.25rem;
+    height: 8.5rem;
+  }
+}
+@media (min-width: 1279px) {
+  .header__logo {
+    width: 2.25rem;
+    height: 8.5rem;
+  }
 }
 .header .navbar__list {
   display: flex;
@@ -178,26 +200,25 @@ body {
   background-image: url(../assets/Images/hero-bio.jpg);
   background-size: cover;
   background-position: center;
-  height: 44vh;
+  height: 60vh;
   width: 100%;
 }
 .hero__heading {
   background-color: rgba(0, 0, 0, 0.5);
-  font-weight: bold;
+  font-weight: 600;
   color: #ffffff;
-  line-height: 44vh;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 2.5rem;
+  line-height: 60vh;
+  padding-left: 2rem;
+  font-size: 4rem;
 }
 @media (min-width: 768px) {
-  .hero {
-    font-size: 3.75rem;
+  .hero__heading {
+    font-size: 4rem;
   }
 }
 @media (min-width: 1279px) {
-  .hero {
-    font-size: 3.75rem;
+  .hero__heading {
+    font-size: 4rem;
   }
 }
 
@@ -378,12 +399,14 @@ body {
   .gallery-heading {
     font-size: 2.25rem;
     line-height: 2.75rem;
+    margin-left: 2rem;
   }
 }
 @media (min-width: 1279px) {
   .gallery-heading {
     font-size: 2.25rem;
     line-height: 2.75rem;
+    margin-left: 2rem;
   }
 }
 .gallery-heading {
@@ -429,13 +452,41 @@ body {
   }
 }
 .form--heading {
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
+  padding: 2rem 1.5rem;
+  font-size: 1.8rem;
+  font-family: "avenir next";
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  .form--heading {
+    font-size: 1.5rem;
+    margin-left: 4rem;
+    font-weight: 400;
+  }
+}
+@media (min-width: 1279px) {
+  .form--heading {
+    font-size: 1.5rem;
+    margin-left: 4rem;
+    font-weight: 400;
+  }
 }
 
 .container__comment .label {
-  padding-left: 3s 0.2rem;
+  padding-left: 3.2rem;
   color: #afafaf;
+}
+@media (min-width: 768px) {
+  .container__comment .label {
+    padding-left: 3.9rem;
+    color: #afafaf;
+  }
+}
+@media (min-width: 1279px) {
+  .container__comment .label {
+    padding-left: 3.9rem;
+    color: #afafaf;
+  }
 }
 .container__comment--name {
   display: flex;
@@ -461,6 +512,7 @@ body {
   border-radius: 0.25rem;
   height: 2.25rem;
   font-family: "Avenir LT Pro", sans-serif;
+  padding-left: 1.25rem;
 }
 .container__comment--msg {
   display: flex;
@@ -573,6 +625,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-bottom: 1rem;
 }
 .feedback__container--header .feedback__header--name {
   font-weight: 600;
