--- a/styles/bio.css
+++ b/styles/bio.css
@@ -108,11 +108,9 @@ body {
   font-family: "Avenir LT Pro", sans-serif;
 }
 .footer--heading {
-  font-weight: 700;
+  font-weight: 400;
   font-size: 24px;
   padding: 2rem 0 2rem 1rem;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
 }
 @media (min-width: 768px) {
   .footer--heading {
@@ -177,6 +175,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 1rem;
   }
   .footer__logo {
     position: relative;
@@ -193,7 +192,7 @@ body {
   .footer__logo {
     position: relative;
     bottom: 19rem;
-    left: 67rem;
+    left: 60rem;
   }
 }
 .hero {
